--- a/kkas/teksts.html
+++ b/kkas/teksts.html
@@ -15,6 +15,6 @@ Text
 
 {% block bilde %}
 
-<img src="" >
+<img src="https://buffer.com/library/content/images/size/w1200/2023/10/free-images.jpg" >
 
 {% endblock %}
